[tool.poetry]
name = "TellMe"
version = "1.0.0"
description = "An Discord Bot implementation of TellMe"
authors = ["Alex Blandin", "Adam Cook", "Ibrahim Al-Jeffery", "Ibukun Olatunji"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
parse = "^1.18.0"
py-ulid = "^1.0.3"
tensorflow = "^2.6.4"
youtube_dl = "^2021.1.8"
"discord.py" = {git = "https://github.com/Gorialis/discord.py", rev = "voice-recv-mk3"}
SpeechRecognition = "^3.8.1"
deepsegment = "^2.3.1"
rake-nltk = "^1.0.4"
gTTS = "^2.2.1"
PyNaCl = "^1.4.0"
librosa = "^0.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
